force-app/main/default/objects/SFGA__Google_Campaign__c/SFGA__Google_Campaign__c.object-meta.xml
<CustomObject>
    <description>Google AdWords Campaigns are high-level marketing initiatives</description>
    <label>Google Campaign</label>
    <nameField>
        <label>Google Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>