force-app/main/default/objects/SFGA__Google_Campaign__c/fields/SFGA__Google_Campaign_Description__c.field-meta.xml
<CustomField>
    <fullName>SFGA__Google_Campaign_Description__c</fullName>
    <label>Google Campaign Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>