force-app/main/default/objects/SFGA__Google_Campaign__c/fields/SFGA__Google_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>SFGA__Google_Campaign_ID__c</fullName>
    <description>Unique Identifier of the Google Campaign</description>
    <label>Google Campaign ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>